# Django_Auth_Sys

./: .gitignore  README.md  pyproject.toml
server/: serializers.py  settings.py  urls.py  views.py
